Feat: Implementasi Database SQL, Proxy Pattern, State Login, dan GUI Dasar

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,10 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.1</version>
+        </dependency>
     </dependencies>
 </project>
