Rename resources folder, Implementasi Database Persistence, dan Validasi Kartu di StateSiaga

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -2,4 +2,4 @@
 app.mode=SQL
 db.url=jdbc:postgresql://localhost:5432/db_atm_simulasi
 db.user=postgres
-db.password=password_anda
+db.password=ZFath636
